Correção de rotas da api, foram adicionadas rotas e endpoints para Aluno e Curso. Correção do bug crypto is not defined.
