# src/application/curso/dtos/CursoResponseDTO.ts
@@ -1,0 +1,8 @@
+export interface CursoResponseDTO {
+    id: string;
+    nome: string;
+    codigo: string;
+    descricao?: string;
+    criadoEm: Date;
+    alunosCount?: number;
+}
